# pudgy32

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: Findtl-expected.cmake
p32test/: CMakeLists.txt
p32test/src/: main.cpp
pudgy32/: CMakeLists.txt  pudgy32_config.hpp.in
pudgy32/include/pudgy32/: expected.hpp  filesystem_interface.hpp  pudgy32.hpp  storage_interface.hpp
pudgy32/src/: filesystem_interface.cpp  pudgy32.cpp  storage_interface.cpp
